fix: fixed some sonar warnings